Added ContextMenu to remove Tab script

--- a/EasyJob.csproj
+++ b/EasyJob.csproj
@@ -33,7 +33,7 @@
 
   <ItemGroup>
     <None Update="config.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
