Fixed and added functionality
Fixed issues with tab and button removals
Added functionality to execute script via PowerShell or CMD

--- a/EasyJob.csproj
+++ b/EasyJob.csproj
@@ -5,6 +5,13 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Images\icon.ico</ApplicationIcon>
+    <Version>1.0.2</Version>
+    <Authors>Akshin Mustafayev</Authors>
+    <Description>Keep and execute your PowerShell scripts from one interface</Description>
+    <Copyright>Akshin Mustafayev</Copyright>
+    <PackageProjectUrl>https://github.com/akshinmustafayev/EasyJob</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/akshinmustafayev/EasyJob</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,7 +47,7 @@
 
   <ItemGroup>
     <None Update="config.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
