--- a/EasyJob.csproj
+++ b/EasyJob.csproj
@@ -18,6 +18,7 @@
     <None Remove="Images\convert.png" />
     <None Remove="Images\down.png" />
     <None Remove="Images\folder.png" />
+    <None Remove="Images\github.png" />
     <None Remove="Images\icon.ico" />
     <None Remove="Images\reload.png" />
     <None Remove="Images\up.png" />
@@ -28,6 +29,7 @@
     <Resource Include="Images\convert.png" />
     <Resource Include="Images\down.png" />
     <Resource Include="Images\folder.png" />
+    <Resource Include="Images\github.png" />
     <Resource Include="Images\icon.ico" />
     <Resource Include="Images\reload.png" />
     <Resource Include="Images\up.png" />
@@ -35,12 +37,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.37" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="LICENSE.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="README.md">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
