Added possibility to set restrictions to config
Added possibility to set restrictions in config
"restrictions": {
    "block_tabs_remove": false,
    "block_buttons_remove": true
  },

--- a/config.json
+++ b/config.json
@@ -5,6 +5,10 @@
   "console_background": "Black",
   "console_foreground": "White",
   "clear_events_when_reload": true,
+  "restrictions": {
+    "block_tabs_remove": false,
+    "block_buttons_remove": true
+  },
   "tabs": [
     {
       "header": "Common actions",
