--- a/EasyJob.csproj
+++ b/EasyJob.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Images\icon.ico</ApplicationIcon>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
     <Authors>Akshin Mustafayev</Authors>
     <Description>Keep and execute your PowerShell scripts from one interface</Description>
     <Copyright>Akshin Mustafayev</Copyright>
@@ -15,6 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\about.png" />
+    <None Remove="Images\close.png" />
     <None Remove="Images\convert.png" />
     <None Remove="Images\down.png" />
     <None Remove="Images\folder.png" />
@@ -22,7 +24,6 @@
     <None Remove="Images\icon.ico" />
     <None Remove="Images\reload.png" />
     <None Remove="Images\up.png" />
-    <None Remove="Images\x.png" />
     <None Remove="LICENSE.txt" />
   </ItemGroup>
 
@@ -31,6 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\about.png" />
+    <Resource Include="Images\close.png" />
     <Resource Include="Images\convert.png" />
     <Resource Include="Images\down.png" />
     <Resource Include="Images\folder.png" />
@@ -38,11 +41,11 @@
     <Resource Include="Images\icon.ico" />
     <Resource Include="Images\reload.png" />
     <Resource Include="Images\up.png" />
-    <Resource Include="Images\x.png" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.37" />
+    <PackageReference Include="ModernWpfUis" Version="1.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
