--- a/config.json
+++ b/config.json
@@ -7,7 +7,9 @@
   "clear_events_when_reload": true,
   "restrictions": {
     "block_tabs_remove": false,
-    "block_buttons_remove": false
+    "block_buttons_remove": false,
+    "block_tabs_add": false,
+    "block_buttons_add": false
   },
   "tabs": [
     {
