--- a/config.json
+++ b/config.json
@@ -13,115 +13,128 @@
   },
   "tabs": [
     {
-      "header": "Common actions",
-      "buttons": [
+      "ID": "357f9827-f4f7-439f-b62c-792e880fd06c",
+      "Header": "Common actions",
+      "Buttons": [
         {
-          "text": "test01",
-          "description": "Some test script",
-          "script": "scripts\\common\\test01.ps1",
-          "scriptpathtype": "relative",
-          "scripttype": "powershell",
-          "arguments": []
+          "Id": "5e371407-140f-4fa2-abf3-2cec4bb174b2",
+          "Text": "test01",
+          "Description": "Some test script",
+          "Script": "scripts\\common\\test01.ps1",
+          "ScriptPathType": "relative",
+          "ScriptType": "powershell",
+          "Arguments": []
         },
         {
-          "text": "test02",
-          "description": "Some second test script",
-          "script": "scripts\\test02.ps1",
-          "scriptpathtype": "relative",
-          "scripttype": "powershell",
-          "arguments": []
+          "Id": "9159b485-39e5-42d6-adb4-275753db9027",
+          "Text": "test02",
+          "Description": "Some second test script",
+          "Script": "scripts\\test02.ps1",
+          "ScriptPathType": "relative",
+          "ScriptType": "powershell",
+          "Arguments": []
         },
         {
-          "text": "bat",
-          "description": "Some second test script",
-          "script": "scripts\\1.bat",
-          "scriptpathtype": "relative",
-          "scripttype": "cmd",
-          "arguments": []
+          "Id": "eaaff0bf-2a9f-4037-bdd6-e8405830d90e",
+          "Text": "bat",
+          "Description": "Some second test script",
+          "Script": "scripts\\1.bat",
+          "ScriptPathType": "relative",
+          "ScriptType": "cmd",
+          "Arguments": []
         },
         {
-          "text": "Absolute script",
-          "description": "",
-          "script": "C:\\scripts\\absolute_script.ps1",
-          "scriptpathtype": "absolute",
-          "scripttype": "powershell",
-          "arguments": []
+          "Id": "5ec086d9-7987-43ef-84fb-1d8481b05aea",
+          "Text": "Absolute script",
+          "Description": "",
+          "Script": "C:\\scripts\\absolute_script.ps1",
+          "ScriptPathType": "absolute",
+          "ScriptType": "powershell",
+          "Arguments": []
         },
         {
-          "text": "test03",
-          "description": "Some test 03 script with arguments",
-          "script": "scripts\\common\\test03.ps1",
-          "scriptpathtype": "relative",
-          "scripttype": "powershell",
-          "arguments": [
+          "Id": "a7b94662-4d66-4a8a-af33-b326a99215cf",
+          "Text": "test03",
+          "Description": "Some test 03 script with arguments",
+          "Script": "scripts\\common\\test03.ps1",
+          "ScriptPathType": "relative",
+          "ScriptType": "powershell",
+          "Arguments": [
             {
-              "argument_question": "Enter IP address or DNS name",
-              "argument_answer": ""
+              "ArgumentQuestion": "Enter IP address or DNS name",
+              "ArgumentAnswer": ""
             }
           ]
         },
         {
-          "text": "test04",
-          "description": "Some test 04 script with arguments",
-          "script": "scripts\\common\\test04.ps1",
-          "scriptpathtype": "relative",
-          "scripttype": "powershell",
-          "arguments": [
+          "Id": "aabc2bf5-e26c-4a73-8e89-e702f14eaa8b",
+          "Text": "test04",
+          "Description": "Some test 04 script with arguments",
+          "Script": "scripts\\common\\test04.ps1",
+          "ScriptPathType": "relative",
+          "ScriptType": "powershell",
+          "Arguments": [
             {
-              "argument_question": "What is your name?",
-              "argument_answer": ""
+              "ArgumentQuestion": "What is your name?",
+              "ArgumentAnswer": ""
             },
             {
-              "argument_question": "What is your surname",
-              "argument_answer": ""
+              "ArgumentQuestion": "What is your surname",
+              "ArgumentAnswer": ""
             },
             {
-              "argument_question": "No, really what is your name?",
-              "argument_answer": ""
+              "ArgumentQuestion": "No, really what is your name?",
+              "ArgumentAnswer": ""
             }
           ]
         }
       ]
     },
     {
-      "header": "Second Tab",
-      "buttons": [
+      "ID": "fa774e10-7772-4074-8d8e-c57b09e9377e",
+      "Header": "Second Tab",
+      "Buttons": [
         {
-          "text": "Some button",
-          "description": "no description",
-          "script": "scripts\\some_button_script.ps1",
-          "scriptpathtype": "relative",
-          "scripttype": "powershell",
-          "arguments": []
+          "Id": "b3ebb860-7682-4613-8f82-0ca59226b0f9",
+          "Text": "Some button",
+          "Description": "no description",
+          "Script": "scripts\\some_button_script.ps1",
+          "ScriptPathType": "relative",
+          "ScriptType": "powershell",
+          "Arguments": []
         },
         {
-          "text": "Some button",
-          "description": "no description",
-          "script": "scripts\\some_button_script2.ps1",
-          "scriptpathtype": "relative",
-          "scripttype": "powershell",
-          "arguments": []
+          "Id": "f9fc3c8f-fb36-432d-96c9-09c4169d540e",
+          "Text": "Some button",
+          "Description": "no description",
+          "Script": "scripts\\some_button_script2.ps1",
+          "ScriptPathType": "relative",
+          "ScriptType": "powershell",
+          "Arguments": []
         }
       ]
     },
     {
-      "header": "Second Tab",
-      "buttons": [
+      "ID": "a744a5e3-4dc0-4f42-abac-ee67dd17c6a1",
+      "Header": "Second Tab",
+      "Buttons": [
         {
-          "text": "Some button 1",
-          "description": "no description",
-          "script": "scripts\\some_button_script.ps1",
-          "scriptpathtype": "relative",
-          "scripttype": "powershell",
-          "arguments": []
+          "Id": "5839ed21-7c33-4aac-9b3c-663cc794e3f5",
+          "Text": "Some button 1",
+          "Description": "no description",
+          "Script": "scripts\\some_button_script.ps1",
+          "ScriptPathType": "relative",
+          "ScriptType": "powershell",
+          "Arguments": []
         },
         {
-          "text": "Button",
-          "description": "",
-          "script": "D:\\net50\\test04.ps1",
-          "scriptpathtype": "absolute",
-          "scripttype": "powershell",
-          "arguments": []
+          "Id": "7ecdea7a-8865-45d7-a037-0dd4dd1cb996",
+          "Text": "Button",
+          "Description": "",
+          "Script": "D:\\net50\\test04.ps1",
+          "ScriptPathType": "absolute",
+          "ScriptType": "powershell",
+          "Arguments": []
         }
       ]
     }
