--- a/EasyJob.csproj
+++ b/EasyJob.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Images\icon.ico</ApplicationIcon>
-    <Version>1.0.9</Version>
+    <Version>1.1.0</Version>
     <Authors>Akshin Mustafayev</Authors>
     <Description>Keep and execute your PowerShell scripts from one interface</Description>
     <Copyright>Akshin Mustafayev</Copyright>
@@ -23,11 +23,13 @@
     <None Remove="Images\close.png" />
     <None Remove="Images\convert.png" />
     <None Remove="Images\down.png" />
+    <None Remove="Images\editbutton.png" />
     <None Remove="Images\exit.png" />
     <None Remove="Images\folder.png" />
     <None Remove="Images\github.png" />
     <None Remove="Images\icon.ico" />
     <None Remove="Images\reload.png" />
+    <None Remove="Images\removebutton.png" />
     <None Remove="Images\removetab.png" />
     <None Remove="Images\renametab.png" />
     <None Remove="Images\reorder.png" />
@@ -50,11 +52,13 @@
     <Resource Include="Images\close.png" />
     <Resource Include="Images\convert.png" />
     <Resource Include="Images\down.png" />
+    <Resource Include="Images\editbutton.png" />
     <Resource Include="Images\exit.png" />
     <Resource Include="Images\folder.png" />
     <Resource Include="Images\github.png" />
     <Resource Include="Images\icon.ico" />
     <Resource Include="Images\reload.png" />
+    <Resource Include="Images\removebutton.png" />
     <Resource Include="Images\removetab.png" />
     <Resource Include="Images\renametab.png" />
     <Resource Include="Images\reorder.png" />
