--- a/config.json
+++ b/config.json
@@ -23,6 +23,7 @@
     "hide_menu_item_settings_workflow_rename_current_tab": false,
     "hide_menu_item_settings_workflow_add_button_to_current_tab": false,
     "hide_menu_item_settings_workflow_reorder_buttons_in_current_tab": false,
+    "hide_menu_item_settings_configuration": false,
     "hide_menu_item_help": false,
     "hide_menu_item_help_troubleshooting": false,
     "hide_menu_item_help_about": false
